🐛 Catch up java validator to Doc Css logic (#28313)